# costco-crawler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.agent/skills/: README.md
.agent/skills/actions-troubleshooting/: SKILL.md
.agent/skills/crawler-operations/: SKILL.md
.agent/skills/private-dispatch/: SKILL.md
.github/workflows/: crawl.yml  image_transform_smoke.yml  test.yml
config/: default.yaml
crawler/: __init__.py  cli.py  server.py
crawler/core/: config.py  fetcher.py  image_downloader.py  image_downloader_selenium.py  storage.py  version_manager.py
crawler/transform/: __init__.py  config.py  index.py  smoke.py  xai.py
crawler/utils/: name_parser.py
data/: current
data/master/: crawl_log.json  discount_history.json
data/versions/2026-01-05/: categories.json  manifest.json  products.json  products_synced.json
data/versions/2026-01-26/: categories.json  manifest.json  products.json
data/versions/2026-02-09/: categories.json  manifest.json  products.json
data/versions/2026-02-23/: categories.json  manifest.json  products.json
data/versions/2026-03-02/: categories.json  manifest.json  products.json
data/versions/2026-03-09/: categories.json  manifest.json  products.json
data/versions/2026-03-16/: categories.json  manifest.json  products.json
docs/: README.md  automation-flow.md  operations-runbook.md  troubleshooting.md  xai-image-poc.md
scripts/: download_images.py  run_transform_smoke_test.py  validate_products_schema.py
tests/: test_fetcher_update_check.py  test_image_transform_smoke.py  test_name_parser.py
(+18 files in other folders)
